fix double beanshell error reporting